--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --hostname  192.168.132.43",
+    "dev": "next dev --hostname 192.168.132.94",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,6 +16,7 @@
     "framer-motion": "^11.11.11",
     "next": "14.2.15",
     "react": "^18",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18"
   },
