--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --hostname 192.168.132.36",
+    "dev": "next dev --hostname 192.168.132.57",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^5.0.2",
     "@nextui-org/date-picker": "^2.1.8",
+    "@nextui-org/react": "^2.4.8",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "framer-motion": "^11.11.11",
@@ -18,7 +19,8 @@
     "react": "^18",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rsuite": "^5.74.1"
   },
   "devDependencies": {
     "eslint": "^8",
