--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
-    "@nextui-org/date-picker": "^2.1.8",
-    "@nextui-org/react": "^2.4.8",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/theme": "^2.2.11",
     "framer-motion": "^11.11.11",
     "next": "14.2.15",
     "react": "^18",
-    "react-date-range": "^2.0.1",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18",
-    "rsuite": "^5.74.1"
+    "react-datetime": "^3.2.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
