--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/playfair-display": "^5.1.1",
     "@fontsource/raleway": "^5.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
