--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
 VITE_BOOKING_ENGINE_URL=//lawrence-view-hotel-apartments-lahore.hotelrunner.com/widgets/7049b834575160d7141d/search_widget.js?v=1.0.0
+VITE_EMAILJS_SERVICE_ID=your_service_id
+VITE_EMAILJS_TEMPLATE_ID=your_template_id
+VITE_EMAILJS_PUBLIC_KEY=your_public_key
