--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/react": "^1.1.21",
     "@emailjs/browser": "^4.4.1",
     "@fontsource/playfair-display": "^5.1.1",
     "@fontsource/raleway": "^5.1.1",
