--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
 
     ports:
-      - "80:80"
+      - "5173:5173"
 
     volumes:
       - .:/app
@@ -15,3 +15,6 @@ services:
 
     env_file:
       - .env
+
+    environment:
+      - CHOKIDAR_USEPOLLING=true
